# rvsfunc

./: .flake8  .gitignore  .readthedocs.yaml  .version  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  rvsfunc.py  setup.cfg  setup.py
.github/workflows/: Syntaxes.yml  autotag.yml  pypi-publish.yml
docs/: NNEDI3.rst  conf.py  cursed.rst  dvd.rst  edgecase.rst  errors.rst  index.rst  masking.rst  sphinx-requirements.txt  utils.rst
mypy-stubs/: nnedi3_rpow2.pyi  vapoursynth.pyi
mypy-stubs/rvsfunc/: NNEDI3.pyi  __init__.pyi  cursed.pyi  dvd.pyi  edgecase.pyi  errors.pyi  masking.pyi  utils.pyi
mypy-stubs/vapoursynth/: vapoursynth.pyi
mypy-stubs/vsutil/: __init__.pyi  clips.pyi  func.pyi  info.pyi  types.pyi
rvsfunc/: NNEDI3.py  __init__.py  cursed.py  dvd.py  edgecase.py  errors.py  masking.py  utils.py
