[metadata]
name = rvsfunc
version = 0.0.1
author = Riven Skaye
author_email = riven@tae.moe
description = VapourSynth functions written or modified by Riven Skaye
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RivenSkaye/rvsfunc
project_urls =
    Bug Tracker = https://github.com/RivenSkaye/rvsfunc/issues
classifiers =
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3 ::Only
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Natural Language :: English
	Topic :: Multimedia :: Graphics

[options]
zip_safe = True
package_dir =
    = rvsfunc
packages = find:
python_requires = >=3.8
install_requires =
    VapourSynth>=51
	vsutil>=0.5.0
	numpy>=1.21.1

[options.packages.find]
where = rvsfunc
