[metadata]
name = rvsfunc
version = file:rvsfunc/.version
author = Riven Skaye
author_email = riven@tae.moe
url = https://github.com/RivenSkaye/rvsfunc
project_urls=
    Bug Tracker = https://github.com/RivenSkaye/rvsfunc/issues
    Docs = https://rvsfunc.tae.moe/

license_files = LICENSE
long_description_files = README.md
description = Lazy VapourSynth functions for basic stuff, made in agony by Riven.
classifiers =
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Development Status :: 4 - Beta,
    Natural Language :: English,
    Topic :: Multimedia :: Graphics

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
setup_requires =
    setuptools>=62.6

install_requires =
    VapourSynth>=51
    vsutil>=0.5.0
    numpy>=1.21.1

packages = rvsfunc

[options.packages.find]
exclude =
    *.egg-info*
    .git*
    .mypy_cache*
    docs*
    mypy-stubs*
    build*
    dist*

[options.extras_require]
dev =
    VapourSynth>=51
    vsutil>=0.5.0
    numpy>=1.21.1
    flake8>=3.9.2
    flake8-comprehensions>=3.6.1
    flake8-raise>=0.0.5
    flake8-return>=1.1.3
    flake8-noqa>=1.1.0
    flake8-quotes>=3.3.0
    flake8-rst-docstrings>=0.2.3
    mypy>=0.910
    mypy-extensions>=0.4.3
    setuptools>=57.4.0
    sphinx>=4.2.0
    sphinx-autodoc-typehints>=1.12.0
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-applehelp>=1.0.2
    sphinxcontrib-devhelp>=1.0.2
    sphinxcontrib-htmlhelp>=2.0.0
    sphinxcontrib-jsmath>=1.0.1
    sphinxcontrib-qthelp>=1.0.3
    sphinxcontrib-serializinghtml>=1.1.5
    twine>=3.4.2
    wheel>=0.37.0
docs =
    sphinx>=4.2.0
    sphinx-autodoc-typehints>=1.12.0
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-applehelp>=1.0.2
    sphinxcontrib-devhelp>=1.0.2
    sphinxcontrib-htmlhelp>=2.0.0
    sphinxcontrib-jsmath>=1.0.1
    sphinxcontrib-qthelp>=1.0.3
    sphinxcontrib-serializinghtml>=1.1.5
    numpy>=1.21.1
